--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,31 @@
-.App {
+footer {
+  color: black;
+  font-size: 14px;
+  font-weight: 200;
+  margin-top: 15px;
+}
+
+.WeatherApp {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.WeatherApp-container {
+  background: #344e7c;
+  box-shadow: 5px 10px 15px 3px #495ea3bd;
+  margin: 50px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.React-logo {
+  height: 30px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .React-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 @keyframes App-logo-spin {
