--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ footer {
   color: black;
   font-size: 14px;
   font-weight: 200;
-  margin-top: 15px;
+  margin-top: -20px;
 }
 
 .WeatherApp {
@@ -12,10 +12,15 @@ footer {
 
 .WeatherApp-container {
   background: #344e7c;
-  box-shadow: 5px 10px 15px 3px #495ea3bd;
+  box-shadow: 5px 10px 10px 3px #495ea3bd;
+  height: auto;
   margin: 50px auto;
-  max-width: 600px;
+  max-width: 550px;
   text-align: center;
+}
+
+.WeatherApp-content {
+  padding: 3px 10px;
 }
 
 .React-logo {
