--- a/src/Weather.css
+++ b/src/Weather.css
@@ -11,7 +11,7 @@
   text-transform: uppercase;
 }
 
-.current-date {
+.current-local-time {
   font-weight: 100;
   line-height: 24px;
   margin: 44px 0 10px;
