--- a/src/Search.css
+++ b/src/Search.css
@@ -2,14 +2,14 @@ form {
   padding: 30px 30px;
 }
 
-.form-control {
+form .form-control {
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 300;
   border-radius: 0px;
 }
 
-#submit-btn {
+form #submit-btn {
   background: #54cbec;
   border-radius: 0px;
   border: none;
@@ -19,7 +19,7 @@ form {
   width: 100px;
 }
 
-#submit-btn:hover {
+form #submit-btn:hover {
   background: white;
   color: #61d9fb;
   font-weight: 300;
