--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,14 +2,15 @@
   padding: 5px 20px;
 }
 
-.current-location {
+.WeatherInfo .current-location {
   font-size: 35px;
   font-weight: 500;
+  letter-spacing: 1px;
   text-align: center;
   text-transform: uppercase;
 }
 
-.current-local-time {
+.WeatherInfo .current-local-time {
   font-weight: 100;
   line-height: 24px;
   margin: -4px 0 10px;
@@ -17,13 +18,13 @@
   text-align: center;
 }
 
-.current-temperature {
+.WeatherInfo .current-temperature {
   font-size: 55px;
   font-weight: 500;
   margin-left: 15px;
 }
 
-.unit {
+.WeatherInfo .unit {
   font-size: 25px;
   font-weight: 300;
   letter-spacing: 1px;
@@ -32,22 +33,23 @@
   left: 2px;
 }
 
-.current-weather-description {
+.WeatherInfo .current-weather-description {
   color: #61d9fb;
   font-size: 19px;
   font-weight: 300;
+  letter-spacing: 1px;
   margin: 2px 0 25px;
   text-transform: uppercase;
 }
 
-.current-weather-details {
+.WeatherInfo .current-weather-details {
   font-size: 16px;
   font-weight: 200;
   line-height: 25px;
   padding: 0 40px;
 }
 
-.current-weather-details .col-4 p {
+.WeatherInfo .current-weather-details .col-4 p {
   border: 1px solid #61d9fb;
   color: #ffffff;
   padding: 10px;
