--- a/src/Search.css
+++ b/src/Search.css
@@ -1,18 +1,24 @@
 form {
-  padding: 30px 30px;
+  padding: 25px 30px 25px;
 }
 
 form .form-control {
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 300;
-  border-radius: 0px;
+}
+
+form .search-input {
+  border-radius: 0;
+  box-shadow: 5px 3px 3px 1px #202a4bbd;
+  font-family: "Poppins", sans-serif;
 }
 
 form #submit-btn {
-  background: #54cbec;
-  border-radius: 0px;
-  border: none;
+  background: #45c1e4;
+  box-shadow: 5px 3px 3px 1px #202a4bbd;
+  border: 1px solid #54cbec;
+  border-radius: 0;
   color: white;
   font-size: 16px;
   font-weight: 300;
@@ -21,7 +27,9 @@ form #submit-btn {
 
 form #submit-btn:hover {
   background: white;
-  color: #61d9fb;
+  border: 1px solid white;
+
+  color: #45c1e4;
   font-weight: 300;
   transition: all 200ms ease-in-out;
 }
