--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,11 +1,12 @@
 .WeatherInfo {
-  padding: 5px 20px;
+  padding: 2px 20px;
 }
 
 .WeatherInfo .current-location {
-  font-size: 35px;
+  font-size: 32px;
   font-weight: 500;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+  line-height: 38px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -13,9 +14,14 @@
 .WeatherInfo .current-local-time {
   font-weight: 100;
   line-height: 24px;
-  margin: -4px 0 10px;
+  margin: 2px 10px;
   padding: 2px;
   text-align: center;
+}
+
+.WeatherInfo .current-icon-and-temperature {
+  display: inline-block;
+  margin-top: 5px;
 }
 
 .WeatherInfo .current-temperature {
@@ -29,7 +35,7 @@
   font-weight: 300;
   letter-spacing: 1px;
   position: relative;
-  bottom: 19px;
+  bottom: 20px;
   left: 2px;
 }
 
@@ -45,12 +51,13 @@
 .WeatherInfo .current-weather-details {
   font-size: 16px;
   font-weight: 200;
-  line-height: 25px;
+  line-height: 24px;
   padding: 0 40px;
 }
 
 .WeatherInfo .current-weather-details .col-4 p {
   border: 1px solid #61d9fb;
+  box-shadow: 5px 3px 3px 1px #202a4bbd;
   color: #ffffff;
   padding: 10px;
 }
