--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,43 @@
+body {
+  background-attachment: fixed;
+  background-image: linear-gradient(180deg, #426dbd 0%, #4c6fac77 75%);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 footer {
   color: black;
-  font-size: 14px;
+  font-size: 11px;
   font-weight: 200;
-  margin-top: -5px;
+  margin-top: 20px;
+  text-align: center;
+  text-decoration: none;
 }
 
 .WeatherApp {
-  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 10px;
   color: white;
+  margin: 30px auto;
+  padding: 4px;
+  max-height: 610px;
+  max-width: 500px;
+  text-align: center;
 }
 
 .WeatherApp-container {
-  background: #324974;
-  box-shadow: 5px 12px 12px 2px #0d193fbd;
-  height: auto;
-  margin: 30px auto;
-  max-width: 600px;
+  background-color: #163d80;
+  background-image: linear-gradient(315deg, #09214f 0%, #385fa477 74%);
+  border-radius: 20px;
+  box-shadow: 5px 10px 10px 5px rgba(15, 15, 15);
+  max-height: 610px;
+  max-width: 500px;
   text-align: center;
 }
 
 .WeatherApp-content {
-  padding: 5px 10px;
+  padding: 10px 10px;
 }
 
 .React-logo {
@@ -44,12 +61,12 @@ footer {
 
 .linkedin-link,
 .github-link {
-  color: #2eb6db;
+  color: black;
   text-decoration: none;
+  font-weight: 400;
 }
 
 .linkedin-link:hover,
 .github-link:hover {
-  color: #54cbec;
-  text-decoration: underline;
+  color: black;
 }
