--- a/src/Search.css
+++ b/src/Search.css
@@ -4,32 +4,35 @@ form {
 
 form .form-control {
   font-family: "Poppins", sans-serif;
-  font-size: 15px;
+  border: 1px solid rgb(56, 56, 56);
+  border-radius: 20px;
+  box-shadow: 3px 3px 3px 2px rgb(56, 56, 56);
   font-weight: 300;
+  line-height: 29px;
+  width: 120%;
 }
 
 form .search-input {
-  border-radius: 0;
   box-shadow: 5px 3px 3px 1px #202a4bbd;
   font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  padding-left: 25px;
 }
 
-form #submit-btn {
-  background: #45c1e4;
-  box-shadow: 5px 3px 3px 1px #202a4bbd;
-  border: 1px solid #54cbec;
-  border-radius: 0;
+.search-city-button {
+  position: relative;
+  left: 30px;
+  background-color: transparent;
+  border-color: white;
   color: white;
-  font-size: 16px;
-  font-weight: 300;
-  width: 100px;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 20px;
 }
 
-form #submit-btn:hover {
-  background: white;
-  border: 1px solid white;
-
-  color: #45c1e4;
-  font-weight: 300;
+.search-city-button:hover {
+  background-color: transparent;
+  border-color: white;
+  color: white;
   transition: all 200ms ease-in-out;
 }
