--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,63 +1,61 @@
-.WeatherInfo {
-  padding: 2px 20px;
-}
-
 .WeatherInfo .current-location {
-  font-size: 32px;
-  font-weight: 500;
-  letter-spacing: 2px;
-  line-height: 38px;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
+  margin-top: 5px;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .WeatherInfo .current-local-time {
+  color: #ffffff;
+  font-size: 14px;
   font-weight: 100;
-  line-height: 24px;
-  margin: 2px 10px;
-  padding: 2px;
+  margin-top: 3px;
   text-align: center;
 }
 
 .WeatherInfo .current-icon-and-temperature {
-  display: inline-block;
-  margin-top: 5px;
+  color: white;
+  display: block;
+  font-size: 45px;
+  font-weight: 400;
+  margin-bottom: 5px;
 }
 
-.WeatherInfo .current-temperature {
-  font-size: 55px;
-  font-weight: 500;
-  margin-left: 15px;
+.WeatherInfo .current-icon {
+  margin-top: 20px;
+  margin-bottom: -14px;
 }
 
 .WeatherInfo .unit {
-  font-size: 25px;
-  font-weight: 300;
+  font-size: 20px;
+  font-weight: 200;
   letter-spacing: 1px;
   position: relative;
-  bottom: 20px;
-  left: 2px;
+  bottom: 18px;
+  left: 5px;
 }
 
 .WeatherInfo .current-weather-description {
   color: #61d9fb;
-  font-size: 19px;
-  font-weight: 300;
-  letter-spacing: 1px;
-  margin: 2px 0 25px;
-  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  margin: 10px 0px 10px;
+  text-align: center;
 }
 
-.WeatherInfo .current-weather-details {
-  font-size: 16px;
+.current-weather-description:first-letter {
+  text-transform: capitalize;
+}
+
+.WeatherInfo .current-weather-details ul {
+  color: white;
+  font-size: 11px;
   font-weight: 200;
-  line-height: 24px;
-  padding: 0 40px;
-}
-
-.WeatherInfo .current-weather-details .col-4 p {
-  border: 1px solid #61d9fb;
-  box-shadow: 5px 3px 3px 1px #202a4bbd;
-  color: #ffffff;
-  padding: 10px;
+  line-height: 22px;
+  list-style: none;
+  text-align: right;
+  position: relative;
+  bottom: 110px;
+  right: 25px;
 }
