--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,15 +1,28 @@
+hr {
+  color: white;
+  margin: -30px 0 40px 10px;
+  max-width: 450px;
+}
+
 .WeatherForecast {
-  font-size: 13px;
-  margin-top: -70px;
-  margin-bottom: 0px;
-  padding: 40px 10px;
+  font-size: 14px;
+  margin: -100px 0 0px;
+  padding: 40px 15px;
   text-align: center;
+}
+
+.WeatherForecast-header {
+  font-size: 14px;
+  font-weight: 400;
+  margin: -10px 0 40px;
+  padding-left: 18px;
+  text-align: left;
+  text-transform: uppercase;
 }
 
 .WeatherForecast-day {
   font-weight: 300;
-  margin-top: -20px;
-  margin-bottom: 18px;
+  margin: -20px 0 18px;
   padding: 3px 0;
 }
 
