--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,11 @@ footer {
 
 .WeatherApp {
   font-family: "Poppins", sans-serif;
-  font-size: 10px;
   color: white;
   margin: 30px auto;
   max-height: 610px;
-  max-width: 500px;
-  padding: 4x;
+  max-width: 550px;
+  padding: 4px;
   text-align: center;
 }
 
@@ -24,7 +23,7 @@ footer {
   background-image: linear-gradient(315deg, #09214f 0%, #385fa477 74%);
   box-shadow: 5px 10px 10px 5px rgba(15, 15, 15);
   max-height: 610px;
-  max-width: 500px;
+  max-width: 550px;
   padding: 5px;
   text-align: center;
 }
