--- a/src/Weather.css
+++ b/src/Weather.css
@@ -3,26 +3,25 @@
 }
 
 .WeatherInfo .current-local-time {
-  color: #ffffff;
   font-size: 15px;
-  font-weight: 100;
+  font-weight: 200;
   margin-top: 8px;
   text-align: center;
 }
 
 .WeatherInfo .current-location {
   color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 25px;
+  font-size: 22px;
+  font-weight: 400;
   margin: 20px 0 -10px;
   text-align: center;
 }
 
 .WeatherInfo .current-weather-description {
   color: #61d9fb;
-  font-family: "Poppins", sans-serif;
-  font-size: 15px;
-  margin-top: 25px;
+  font-weight: 300;
+  font-size: 16px;
+  margin-top: 28px;
 }
 
 .current-weather-description:first-letter {
@@ -30,12 +29,14 @@
 }
 
 .WeatherInfo .current-icon {
-  margin: 50px 0 0px;
-  padding-left: 50px;
+  position: relative;
+  top: 50px;
+  left: 25px;
 }
 
 .WeatherInfo .current-temperature {
-  font-size: 50px;
+  font-size: 40px;
+  font-weight: 400;
   margin-top: 20px;
   text-align: center;
 }
@@ -45,25 +46,27 @@
   font-weight: 300;
   letter-spacing: 2px;
   position: relative;
-  bottom: 22px;
-  left: 7px;
+  bottom: 13px;
+  left: 5px;
 }
 
 .WeatherInfo .max-and-min-temperatures {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 200;
   line-height: 28px;
-  margin-top: 15px;
+  margin-top: 25px;
   text-align: center;
+  position: relative;
+  right: 13px;
 }
 
 .WeatherInfo .current-weather-details ul {
   color: white;
-  font-size: 11px;
+  font-size: 13px;
   font-weight: 100;
-  line-height: 20px;
+  line-height: 21px;
   list-style: none;
   position: relative;
-  left: 315px;
-  bottom: 115px;
+  left: 332px;
+  bottom: 118px;
 }
