--- a/src/Search.css
+++ b/src/Search.css
@@ -16,7 +16,7 @@ form .search-input {
   box-shadow: 5px 3px 3px 1px #202a4bbd;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
-  padding-left: 25px;
+  padding-left: 20px;
 }
 
 .search-city-button {
@@ -34,4 +34,15 @@ form .search-input {
   border-radius: 0;
   color: white;
   transition: all 200ms ease-in-out;
+}
+
+@media (max-width: 800px) {
+  form {
+    padding: 20px 20px;
+  }
+
+  form .search-input {
+    font-size: 13px;
+    padding-left: 15px;
+  }
 }
