--- a/src/Weather.css
+++ b/src/Weather.css
@@ -46,7 +46,7 @@
   font-weight: 300;
   letter-spacing: 2px;
   position: relative;
-  bottom: 13px;
+  bottom: 14px;
   left: 5px;
 }
 
@@ -64,9 +64,49 @@
   color: white;
   font-size: 13px;
   font-weight: 100;
-  line-height: 21px;
+  line-height: 19px;
   list-style: none;
   position: relative;
   left: 332px;
   bottom: 118px;
+}
+
+@media (max-width: 800px) {
+  .WeatherInfo .current-local-time {
+    font-size: 13px;
+  }
+
+  .WeatherInfo .current-icon {
+    position: relative;
+    top: 45px;
+    left: 35px;
+  }
+
+  .WeatherInfo .current-temperature {
+    font-size: 38px;
+  }
+
+  .WeatherInfo .unit {
+    position: relative;
+    bottom: 12px;
+    left: 5px;
+  }
+
+  .WeatherInfo .max-and-min-temperatures {
+    font-size: 12px;
+    margin-top: 20px;
+  }
+
+  .WeatherInfo .current-weather-description {
+    font-size: 14px;
+    margin-top: 25px;
+  }
+
+  .WeatherInfo .current-weather-details ul {
+    font-size: 11px;
+    line-height: 18px;
+    position: relative;
+    left: 243px;
+    bottom: 108px;
+  }
 }
