--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -22,12 +22,12 @@ hr {
 
 .WeatherForecast-day {
   font-weight: 300;
-  margin: -20px 0 18px;
-  padding: 3px 0;
+  font-size: 12px;
+  margin: -20px 0 15px;
 }
 
 .WeatherForecast-temperatures {
-  margin-top: 8px;
+  margin-top: 10px;
   margin-bottom: -20px;
 }
 
@@ -39,4 +39,16 @@ hr {
   font-weight: 300;
   margin-left: 8px;
   opacity: 0.7;
+}
+
+@media (max-width: 800px) {
+  .WeatherForecast {
+    font-size: 11px;
+    padding: 30px 0px;
+  }
+
+  .WeatherForecast-header {
+    font-size: 12px;
+    margin-top: 10px;
+  }
 }
