--- a/src/Weather.css
+++ b/src/Weather.css
@@ -76,6 +76,10 @@
     font-size: 13px;
   }
 
+  .WeatherInfo .current-location {
+    font-size: 20px;
+  }
+
   .WeatherInfo .current-icon {
     position: relative;
     top: 45px;
@@ -98,7 +102,7 @@
   }
 
   .WeatherInfo .current-weather-description {
-    font-size: 14px;
+    font-size: 15px;
     margin-top: 25px;
   }
 
