--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ footer {
   color: white;
   margin: 30px auto;
   max-height: 610px;
-  max-width: 550px;
+  max-width: 525px;
   padding: 4px;
   text-align: center;
 }
@@ -23,7 +23,7 @@ footer {
   background-image: linear-gradient(315deg, #09214f 0%, #385fa477 74%);
   box-shadow: 5px 10px 10px 5px rgba(15, 15, 15);
   max-height: 610px;
-  max-width: 550px;
+  max-width: 525px;
   padding: 5px;
   text-align: center;
 }
@@ -69,13 +69,19 @@ footer {
   color: black;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
   .WeatherApp {
-    margin: 20px auto;
+    margin: 30px auto;
+    max-height: 610px;
+    max-width: 520px;
+    padding: 4px;
   }
 
   .WeatherApp-container {
-    margin: 20px auto;
+    margin: 30px auto;
+    max-height: 610px;
+    max-width: 520px;
+    padding: 4px;
   }
 
   .Swap-button {
