--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,12 +1,12 @@
 hr {
   color: white;
-  margin: -30px 0 40px 10px;
-  max-width: 450px;
+  margin: -30px 0 40px 0px;
+  max-width: 460px;
 }
 
 .WeatherForecast {
   font-size: 15px;
-  margin: -100px 0 0px;
+  margin: -80px 0 10px;
   padding: 40px 20px;
   text-align: center;
 }
@@ -27,6 +27,7 @@ hr {
 }
 
 .WeatherForecast-temperatures {
+  font-size: 13px;
   margin-top: 10px;
   margin-bottom: -20px;
 }
@@ -41,10 +42,11 @@ hr {
   opacity: 0.7;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
   .WeatherForecast {
     font-size: 11px;
-    padding: 30px 0px;
+    margin-bottom: 20px;
+    padding: 18px 0px;
   }
 
   .WeatherForecast-header {
