Applied general changes to CSS

--- a/src/Search.css
+++ b/src/Search.css
@@ -9,7 +9,8 @@ form .form-control {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   line-height: 25px;
-  width: 118%;
+  width: 108%;
+  margin-left: 10px;
 }
 
 form .search-input {
@@ -20,12 +21,13 @@ form .search-input {
 }
 
 .search-city-button {
-  background-color: transparent;
+  border-radius: 0;
+  border: 1px solid white;
   color: white;
   font-size: 18px;
   padding: 5px 10px;
   position: relative;
-  left: 25px;
+  left: 5px;
 }
 
 .search-city-button:hover {
