--- a/src/Search.css
+++ b/src/Search.css
@@ -9,8 +9,8 @@ form .form-control {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   line-height: 25px;
-  width: 108%;
-  margin-left: 10px;
+  width: 117%;
+  margin-left: 5px;
 }
 
 form .search-input {
@@ -27,7 +27,7 @@ form .search-input {
   font-size: 18px;
   padding: 5px 10px;
   position: relative;
-  left: 5px;
+  left: 26px;
 }
 
 .search-city-button:hover {
@@ -46,5 +46,27 @@ form .search-input {
   form .search-input {
     font-size: 13px;
     padding-left: 15px;
+  }
+}
+
+@media (max-width: 414px) {
+  form {
+    padding: 20px 20px;
+  }
+
+  form .form-control {
+    width: 120%;
+    margin-left: -6px;
+  }
+
+  form .search-input {
+    font-size: 13px;
+    padding-left: 15px;
+  }
+
+  .search-city-button {
+    padding: 5px 10px;
+    position: relative;
+    left: 19px;
   }
 }
