--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  background-attachment: fixed;
+  background-image: linear-gradient(180deg, #305baa 0%, #4c6fac77 75%);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 footer {
   color: black;
   font-size: 12px;
